--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "description": "Cálculo de Juros e Multa para Mensalidades em Atraso",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
